--- a/aula#1-html/sobre.html
+++ b/aula#1-html/sobre.html
@@ -27,15 +27,6 @@
 	border-top: 1px solid black;
      }
 
-     .destaque {
-        width: 40%;
-	float: left;
-     }
-
-     .secundaria {
-        float: left;
-	width: 40%;
-     }
 
   </style>
 </head>
@@ -51,25 +42,14 @@
   </div>
   
   <div class="principal">
-     <div class="destaque">
-        <h2>Santos vence mais uma</h2>
+        <h2>Sobre</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-        <img src="./imagens/destaque.png" />
   
-     </div>
-
-     <div class="secundaria">
-        <h2>Últimas notícias</h2>
-
-	<h3>What is Lorem Ipsum?</h3>
 	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
 	
-	<h3>What is Lorem Ipsum?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
 
-	<h3>What is Lorem Ipsum?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-     </div>
   </div>
 </body>
 
