--- a/aula#1-html/index.html
+++ b/aula#1-html/index.html
@@ -37,12 +37,18 @@
 	width: 40%;
      }
 
+     .banner {
+        text-align: center;
+     }
+
   </style>
 </head>
 
 <body>
   <div>
      <h1>Fanáticos por Futebol</h1>
+
+     <div class="banner"><img src="./imagens/banner.png"><div>
 
      <ul>
 	<li><a href="index.html">Home</a></li>
